# oppai

./: .gitignore  Cargo.toml  README.md  convert_dates.py  create_details  database.sqlite-journal  init_db.sql  settings.example.toml
content/: index.html  index.js  styles.css
migrations/2018-12-26-022402_create_videos/: up.sql
migrations/2018-12-26-022537_create_actresss/: down.sql  up.sql
migrations/2018-12-26-022935_create_video_actresss/: down.sql  up.sql
src/: backend.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
