[package]
name = "oppai"
version = "0.1.0"
authors = ["Some Guy"]
edition = "2018"

[dependencies]
web-view = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
iron = "0.6"
staticfile = "0.5"
mount = "0.4"
router = "0.6"
http = "0.1"
glob = "0.2"
regex = "1"
config = "0.9"
lazy_static = "1"
rusqlite = "0.16"
asianscreens = { git = "https://github.com/thighstump/asianscreens" }
